category create API added

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -3,3 +3,4 @@ complete.registration= ????????? ???????????
 to.many.attempt=??? ?????? ???????. ??????????, ?????????? ????? 1 ??????.
 profile.in.wrong.status=??????? ? ???????????? ???????.
 profile.not.fount=??????? ?? ??????
+category.exists=????? ?? ?????
