--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -3,4 +3,5 @@ complete.registration=to'liq ro'yxatdan o'tish
 to.many.attempt=Ko'p urinishlar uchun. Iltimos, 1 daqiqadan so'ng urinib ko'ring.
 profile.in.wrong.status=Profil notogri holatda.
 profile.not.fount=profile topilmadi
+category.exists=Kategoriya mavjud
 
