--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,5 +1,7 @@
 email.exists=Email exists
-complete.registration= complete registration
+complete.registration=complete registration
 to.many.attempt=For many attempts. Please try again in 1 minute.
 profile.in.wrong.status=The profile is in the wrong state.
-profile.not.fount=profile not found
+profile.not.found=Profile not found
+successful=Successful
+error=Error
