--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -1,5 +1,7 @@
 email.exists=??????????? ????? ????????
-complete.registration= ????????? ???????????
+complete.registration=????????? ???????????
 to.many.attempt=??? ?????? ???????. ??????????, ?????????? ????? 1 ??????.
 profile.in.wrong.status=??????? ? ???????????? ???????.
-profile.not.fount=??????? ?? ??????
+profile.not.found=??????? ?? ??????
+successful=Успешный
+error=Ошибка
