Profile update email add

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -5,3 +5,4 @@ profile.in.wrong.status=??????? ? ???????????? ???????.
 profile.not.found=??????? ?? ??????
 successful=Успешный
 error=Ошибка
+message.has.been.sent.to.email=сообщение отправлено на электронную почту
