--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -7,4 +7,5 @@ successful=Muvaffaqiyatli
 error=Xatolik
 profile.not.fount=profile topilmadi
 category.exists=Kategoriya mavjud
+message.has.been.sent.to.email=Emailga xabar junatildi
 
