--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -5,3 +5,4 @@ profile.in.wrong.status=The profile is in the wrong state.
 profile.not.found=Profile not found
 successful=Successful
 error=Error
+message.has.been.sent.to.email=Message has been sent to email
