Channel create update API add

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -6,3 +6,4 @@ profile.not.found=Profile not found
 successful=Successful
 error=Error
 message.has.been.sent.to.email=Message has been sent to email
+channel.not.found=Channel not found
