--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -6,3 +6,4 @@ profile.not.found=??????? ?? ??????
 successful=Успешный
 error=Ошибка
 message.has.been.sent.to.email=сообщение отправлено на электронную почту
+channel.not.found=channel not found rus
