--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -8,4 +8,5 @@ error=Xatolik
 profile.not.fount=profile topilmadi
 category.exists=Kategoriya mavjud
 message.has.been.sent.to.email=Emailga xabar junatildi
+channel.not.found=Kanal topilmadi
 
