Video api UpdateStatusVideo added

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -8,3 +8,4 @@ error=Ошибка
 message.has.been.sent.to.email=сообщение отправлено на электронную почту
 channel.not.found=channel not found rus
 there.error.in.what.you.sent=? ???????????? ???? ????????? ???? ??????
+video.not.found=????? ?? ???????
