--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -10,3 +10,4 @@ category.exists=Kategoriya mavjud
 message.has.been.sent.to.email=Emailga xabar junatildi
 channel.not.found=Kanal topilmadi
 there.error.in.what.you.sent=Siz yuborgan ma'lumotlarda xatolik bor
+video.not.found=Video topilmadi
