profileAPI update Photo API added

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -7,3 +7,4 @@ successful=Successful
 error=Error
 message.has.been.sent.to.email=Message has been sent to email
 channel.not.found=Channel not found
+attach.not.found= Attach not found
