--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -7,3 +7,4 @@ successful=Успешный
 error=Ошибка
 message.has.been.sent.to.email=сообщение отправлено на электронную почту
 channel.not.found=channel not found rus
+attach.not.found = ??? ??? ???
