--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -9,4 +9,4 @@ profile.not.fount=profile topilmadi
 category.exists=Kategoriya mavjud
 message.has.been.sent.to.email=Emailga xabar junatildi
 channel.not.found=Kanal topilmadi
-
+attach.not.found= Attach not found;
