remove permission Api added

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -9,3 +9,4 @@ message.has.been.sent.to.email=сообщение отправлено на эл
 channel.not.found=channel not found rus
 there.error.in.what.you.sent=? ???????????? ???? ????????? ???? ??????
 video.not.found=????? ??????????
+permission.has.already=?????
