--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -11,5 +11,6 @@ message.has.been.sent.to.email=Emailga xabar junatildi
 channel.not.found=Kanal topilmadi
 there.error.in.what.you.sent=Siz yuborgan ma'lumotlarda xatolik bor
 video.not.found=video topilamdi
+permission.has.already=ruxsat allaqachon berilgan
 
 
