--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -9,3 +9,4 @@ message.has.been.sent.to.email=Message has been sent to email
 channel.not.found=Channel not found
 there.error.in.what.you.sent=There is an error in what you sent
 video.not.found=video not found
+permission.has.already=permission has already been granted
