profile api update photo metod is i18n language(en,ru,uz)added

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -10,3 +10,5 @@ channel.not.found=channel not found rus
 there.error.in.what.you.sent=? ???????????? ???? ????????? ???? ??????
 video.not.found=????? ??????????
 permission.has.already=?????
+not.allowed=?? ???????????
+attach.not.found=???????????? ?? ???????
