--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -10,3 +10,5 @@ channel.not.found=Channel not found
 there.error.in.what.you.sent=There is an error in what you sent
 video.not.found=video not found
 permission.has.already=permission has already been granted
+problem.do.not.channel=You do not have a channel
+video.could.not.found=The video you sent could not be found
