--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -12,5 +12,5 @@ channel.not.found=Kanal topilmadi
 there.error.in.what.you.sent=Siz yuborgan ma'lumotlarda xatolik bor
 video.not.found=video topilamdi
 permission.has.already=ruxsat allaqachon berilgan
-
-
+problem.do.not.channel=Sizda kanal mavjud emas
+video.could.not.found=Siz yuborgan video topilmadi
