Video tag api added

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -12,3 +12,5 @@ video.not.found=????? ??????????
 permission.has.already=?????
 problem.do.not.channel=? ??? ??? ??????
 video.could.not.found=???????????? ???? ????? ?? ???????.
+video.tag.not.found=??? ????? ?? ??????
+tag.not.found = ??? ?? ??????
