--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -14,3 +14,5 @@ video.not.found=video topilamdi
 permission.has.already=ruxsat allaqachon berilgan
 problem.do.not.channel=Sizda kanal mavjud emas
 video.could.not.found=Siz yuborgan video topilmadi
+video.tag.not.found=Video tag topilmadi
+tag.not.found = Tag topilmadi
