--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -12,3 +12,5 @@ video.not.found=video not found
 permission.has.already=permission has already been granted
 problem.do.not.channel=You do not have a channel
 video.could.not.found=The video you sent could not be found
+video.tag.not.found= Video tag not found
+tag.not.found = Tag not found
