Playlist change status, delete API add

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -14,3 +14,5 @@ not.allowed=?? ???????????
 attach.not.found=???????????? ?? ???????
 problem.do.not.channel=? ??? ??? ??????
 video.could.not.found=???????????? ???? ????? ?? ???????.
+playlist.not.found=playlist.not.found ru
+this.playlist.does.not.belong.to.you=this.playlist.does.not.belong.to.you RU
