--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -14,6 +14,7 @@ video.not.found=video topilamdi
 permission.has.already=ruxsat allaqachon berilgan
 not.allowed=Ruxsat berilmagan
 attach.not.found=Rasm topilmadi
-
 problem.do.not.channel=Sizda kanal mavjud emas
 video.could.not.found=Siz yuborgan video topilmadi
+playlist.not.found=Playlist topilmadi
+this.playlist.does.not.belong.to.you=Bu playlist sizga tegishli emas
