--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -11,6 +11,8 @@ there.error.in.what.you.sent=There is an error in what you sent
 video.not.found=video not found
 permission.has.already=permission has already been granted
 not.allowed=Not allowed
-attach.not.found= Attach not found
+attach.not.found=Attach not found
 problem.do.not.channel=You do not have a channel
 video.could.not.found=The video you sent could not be found
+playlist.not.found=Playlist not found
+this.playlist.does.not.belong.to.you=This playlist does not belong to you
