update comment API added

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -19,3 +19,5 @@ tag.not.found = Tag not found
 
 playlist.not.found=Playlist not found
 this.playlist.does.not.belong.to.you=This playlist does not belong to you
+comment.not.found=Comment not found
+this.comment.does.not =This comment does not belong to you
