--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -18,3 +18,5 @@ video.tag.not.found=??? ????? ?? ??????
 tag.not.found = ??? ?? ??????
 playlist.not.found=playlist.not.found ru
 this.playlist.does.not.belong.to.you=this.playlist.does.not.belong.to.you RU
+comment.not.found=Comment not found
+this.comment.does.not =This comment does not belong to you
