--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -21,3 +21,6 @@ tag.not.found = Tag topilmadi
 
 playlist.not.found=Playlist topilmadi
 this.playlist.does.not.belong.to.you=Bu playlist sizga tegishli emas
+
+comment.not.found=Komment topilmadi
+this.comment.does.not =Bu Komment sizga tegishli emas
