--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -21,3 +21,4 @@ tag.not.found = Tag topilmadi
 
 playlist.not.found=Playlist topilmadi
 this.playlist.does.not.belong.to.you=Bu playlist sizga tegishli emas
+playlist.video.not.found=Playlist video topilmadi
