Subscription api update method added

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -21,3 +21,6 @@ this.playlist.does.not.belong.to.you=this.playlist.does.not.belong.to.you RU
 comment.not.found=Comment not found
 this.comment.does.not =This comment does not belong to you
 playlist.video.not.found=????? ? ????????? ?? ???????
+subscription.not.found=???????? ?? ???????
+
+
