--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -22,3 +22,5 @@ this.playlist.does.not.belong.to.you=This playlist does not belong to you
 comment.not.found=Comment not found
 this.comment.does.not =This comment does not belong to you
 playlist.video.not.found=Playlist Video not found
+
+comment.like.not.found = Comment like not found
