--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -25,3 +25,5 @@ this.playlist.does.not.belong.to.you=Bu playlist sizga tegishli emas
 comment.not.found=Komment topilmadi
 this.comment.does.not =Bu Komment sizga tegishli emas
 playlist.video.not.found=Playlist video topilmadi
+
+comment.like.not.found = Komment like topilmadi
