--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -22,7 +22,5 @@ comment.not.found=Comment not found
 this.comment.does.not =This comment does not belong to you
 playlist.video.not.found=????? ? ????????? ?? ???????
 subscription.not.found=???????? ?? ???????
-
-
-
 comment.like.not.found = ??? ???
+report.not.found=????? ?? ??????
