--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -18,13 +18,11 @@ problem.do.not.channel=Sizda kanal mavjud emas
 video.could.not.found=Siz yuborgan video topilmadi
 video.tag.not.found=Video tag topilmadi
 tag.not.found = Tag topilmadi
-
 playlist.not.found=Playlist topilmadi
 this.playlist.does.not.belong.to.you=Bu playlist sizga tegishli emas
-
 comment.not.found=Komment topilmadi
 this.comment.does.not =Bu Komment sizga tegishli emas
 playlist.video.not.found=Playlist video topilmadi
 subscription.not.found=Subscription topilmadi
-
 comment.like.not.found = Komment like topilmadi
+report.not.found=Hisobot topilmadi
