--- a/src/main/resources/i18n/messages_uz.properties
+++ b/src/main/resources/i18n/messages_uz.properties
@@ -26,5 +26,5 @@ comment.not.found=Komment topilmadi
 this.comment.does.not =Bu Komment sizga tegishli emas
 playlist.video.not.found=Playlist video topilmadi
 subscription.not.found=Subscription topilmadi
-
+playListShortMapper.not.found=Playlist topilmadi
 comment.like.not.found = Komment like topilmadi
