--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -22,6 +22,7 @@ comment.not.found=Comment not found
 this.comment.does.not =This comment does not belong to you
 playlist.video.not.found=????? ? ????????? ?? ???????
 subscription.not.found=???????? ?? ???????
+playListShortMapper.not.found=playListShortMapper.not.found ru
 
 
 
